--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,6 +1,11 @@
 <div class="bar">
+  <div>
+    <input type="text" placeholder="Search" class="form-input">
+  </div>
   <a href="">
     <i data-feather="grid" color="" ></i>
+  </a>
+  <a >
     <i data-feather="bell" color="" ></i>
   </a>
 </div>
