--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,12 @@
-.title{
-  font-size: 1.3rem;
-  font-weight: bold;
+.header{
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+
+  .title{
+    font-size: 1.3rem;
+    font-weight: bold;
+  }
 }
+
