sale component building

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
       </a>
     </li>
     <li>
-      <a [routerLink]="['/makesale']" routerLinkActive="nav-active" class="nav">
+      <a [routerLink]="['/sales']" routerLinkActive="nav-active" class="nav">
         Make Sale
       </a>
     </li>
