--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -57,6 +57,8 @@ $color1: #FFE379;
 
     li{
       height: 60px;
+      position: relative;
+      // border: solid red 1px;
 
       a{
         font-size: 1.15rem;
