--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
 
     <router-outlet></router-outlet>
 
-
-
     <notifier-container></notifier-container>
+      <ng-progress></ng-progress>
+
   </div>
 </div>
