--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,11 @@ a{
   }
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button{
+  -webkit-appearance: none;
+}
+
 input, .form-control {
   display: block;
   width: 100%;
@@ -135,6 +140,20 @@ button, input, optgroup, select, textarea {
 
 }
 
+
+.red{
+  background: #ff5a5a !important;
+  color: #fff;
+
+  &:hover{
+    color: #fff;
+    background-color: rgba(255, 92, 92, 0.726) !important;
+    outline: none;
+    box-shadow:0px 10px 13px -7px #ffd4d4;
+  }
+
+}
+
 .header{
   display: flex;
   flex-flow: row nowrap;
@@ -209,3 +228,155 @@ button[disabled]{
 input.ng-invalid.ng-touched, select.ng-invalid.ng-touched{
   border-color: #ff5151;
 }
+
+// Custom Checkbox Styling
+
+@supports(-webkit-appearance: none) or (-moz-appearance: none) {
+
+  input[type='checkbox'],
+  input[type='radio'] {
+    --active: #FF5959;
+    --active-inner: #fff;
+    --focus: .5px rgba(255, 89, 89, 0.582);
+    --border: #BBC1E1;
+    --border-hover: #FF5959;
+    --background: #fff;
+    --disabled: #F6F8FF;
+    --disabled-inner: #E1E6F9;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    height: 21px;
+    outline: none;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    margin: 0;
+    margin-right: 7px;
+    padding: 0;
+    cursor: pointer;
+    border: 1px solid var(--bc, var(--border));
+    background: var(--b, var(--background));
+    transition: background .5s, border-color .3s, box-shadow .6s;
+    &:after {
+      content: '';
+      display: block;
+      left: 0;
+      top: 0;
+      position: absolute;
+      transition: transform var(--d-t, .3s) var(--d-t-e, ease), opacity var(--d-o, .2s);
+    }
+    &:checked {
+      --b: var(--active);
+      --bc: var(--active);
+      --d-o: .3s;
+      --d-t: .6s;
+      --d-t-e: cubic-bezier(.2, .85, .32, 1.2);
+
+      &+label{
+      opacity: 1;
+      }
+    }
+    &:disabled {
+      --b: var(--disabled);
+      cursor: not-allowed;
+      opacity: .9;
+      &:checked {
+        --b: var(--disabled-inner);
+        --bc: var(--border);
+      }
+      & + label {
+        cursor: not-allowed;
+      }
+    }
+    &:hover {
+      &:not(:checked) {
+        &:not(:disabled) {
+          --bc: var(--border-hover);
+        }
+      }
+    }
+    &:focus {
+      box-shadow: 0 0 0 var(--focus);
+    }
+    &:not(.switch) {
+      width: 21px;
+      &:after {
+        opacity: var(--o, 0);
+      }
+      &:checked {
+        --o: 1;
+      }
+    }
+    & + label {
+      font-size: 14px;
+      line-height: 21px;
+      display: inline-block;
+      vertical-align: top;
+      cursor: pointer;
+      margin-left: 4px;
+      opacity: 0.6;
+      transition: opacity .5s cubic-bezier(.2, .85, .32, 1.2);
+    }
+  }
+
+
+  input[type='checkbox'] {
+    &:not(.switch) {
+      border-radius: 7px;
+      &:after {
+        width: 5px;
+        height: 9px;
+        border: 2px solid var(--active-inner);
+        border-top: 0;
+        border-left: 0;
+        left: 7px;
+        top: 4px;
+        transform: rotate(var(--r, 20deg));
+      }
+      &:checked {
+        --r: 43deg;
+      }
+    }
+    &.switch {
+      width: 38px;
+      border-radius: 11px;
+      &:after {
+        left: 2px;
+        top: 2px;
+        border-radius: 50%;
+        width: 15px;
+        height: 15px;
+        background: var(--ab, var(--border));
+        transform: translateX(var(--x, 0));
+      }
+      &:checked {
+        --ab: var(--active-inner);
+        --x: 17px;
+      }
+      &:disabled {
+        &:not(:checked) {
+          &:after {
+            opacity: .6;
+          }
+        }
+      }
+    }
+  }
+  input[type='radio'] {
+    border-radius: 50%;
+    &:after {
+      width: 19px;
+      height: 19px;
+      border-radius: 50%;
+      background: var(--active-inner);
+      opacity: 0;
+      transform: scale(var(--s, .7));
+    }
+    &:checked {
+      --s: .5;
+    }
+  }
+}
+
+
+
