--- a/src/app/sales/sales.component.html
+++ b/src/app/sales/sales.component.html
@@ -39,8 +39,52 @@
   <div class="side">
     <div class="side-total">
       <div class="card-container">
-        <div  class="_jd">
-          <h2 _ngcontent-wvi-c54=""> Client Cart (1) </h2>
+        <div  class="_sid">
+          <h2> Sale Summary</h2>
+        </div>
+        <div class="_sdeta">
+          <div class="_dk">
+            <div class="pro_d">
+              Derika Rice 500kg
+            </div>
+            <div class="_pro_pr">
+              $5500
+            </div>
+          </div>
+          <div class="_dk">
+            <div class="pro_d">
+              Derika Rice 500kg
+            </div>
+            <div class="_pro_pr">
+              $55029
+            </div>
+          </div>
+          <div class="_dk">
+            <div class="pro_d">
+              Derika Rice 500kg
+            </div>
+            <div class="_pro_pr">
+              $55
+            </div>
+          </div>
+        </div>
+
+        <div class="pay">
+          <div class="tt_ot">
+            <div class="tti">
+              <div class="fur">
+                Total
+              </div>
+              <div class="fke">
+                $25000033
+              </div>
+            </div>
+          </div>
+          <div class="_pa">
+            <button class="red">
+              Make Sale ({{numbers}})
+            </button>
+          </div>
         </div>
       </div>
     </div>
