--- a/src/app/sale/sale.component.html
+++ b/src/app/sale/sale.component.html
@@ -4,29 +4,36 @@
 
     <div class="prod">
       <div class="checkbox">
-        <input id="c1" name="checkbox" type="checkbox">
+        <input name="checkbox" type="checkbox">
       </div>
       <div>
-        Select Product
+        <select class="select" name="name" [ngModel]="product.id" #name="ngModel" required>
+          <option disabled [ngValue]="null">Select Product</option>
+          <option *ngFor="let item of Products" [value]="item.id">{{item.name}}</option>
+        </select>
+        <!-- Select Product -->
       </div>
-      <div class="total">
+      <!-- <div class="total">
         <span *ngIf="!discountSet">
           ${{total}}
         </span>
         <span *ngIf="discountSet">
           ${{discountPrice * quantity}}
         </span>
+      </div> -->
+      <div class="total">
+        <span>
+          ${{total}}
+        </span>
       </div>
+
     </div>
 
     <div class="pro-body">
       <div class="_det">
-        <div class="_pdetails">
-          {{dummy.details}}
+        <div class="_pdetails" [ngClass]="{'red-text': !productSet}">
+          {{product.details}}
         </div>
-        <!-- <div class="_pcode">
-          11203939100039949
-        </div> -->
         <div class="_pava">
           <div class="_ic">
             <svg width="20" height="22" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -35,20 +42,20 @@
               <path d="M14 9C14 10.0609 13.5786 11.0783 12.8284 11.8284C12.0783 12.5786 11.0609 13 10 13C8.93913 13 7.92172 12.5786 7.17157 11.8284C6.42143 11.0783 6 10.0609 6 9" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </div>
-          <div class="_qty"> {{dummy.quantity}} </div>
-          <div class="_uni"> {{dummy.unit}} </div>
+          <div class="_qty"> {{product.quantity}} </div>
+          <div class="_uni"> {{product.unit}} </div>
         </div>
 
         <div class="_prc">
           <span [ngClass]="{'dsc': discountSet}">
-            ${{dummy.price}}
+            ${{product.price}}
           </span>
           <span *ngIf="discountSet">
             ${{discountPrice}}
-          </span> 
+          </span>
           <span *ngIf="discountSet" [ngClass]="{'help': discountSet}">
             Discounted Price
-          </span> 
+          </span>
         </div>
 
       </div>
@@ -62,8 +69,8 @@
               <path d="M1 1H15" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </button>
-          <input type="number" name="quantity" (keyup)="qtyCheck()" (blur)="blurCheck()" #qty [disabled]="dummy.quantity == 0 ? true : false" [(ngModel)]="quantity">
-          <button (click)="incrementCount()" [disabled]="quantity < dummy.quantity ? false : true">
+          <input type="number" autocomplete="off" name="quantity" (keyup)="qtyCheck()" (blur)="blurCheck()" #qty="ngModel" [disabled]="product.quantity == 0 ? true : false" [(ngModel)]="quantity">
+          <button (click)="incrementCount()" [disabled]="quantity < product.quantity ? false : true">
             <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.24927 1.1629V15.1629" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M1.24927 8.1629H15.2493" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
@@ -74,9 +81,9 @@
 
     </div>
 
-    <div class="pro-footer">
+    <div class="pro-footer" [ngClass]="{'show': toggle}">
       <div class="_pfor">
-        <div class="dis">
+        <div class="dis" (click)="toggle = !toggle">
           <span>
             Discount
           </span>
@@ -87,15 +94,14 @@
           </span>
         </div>
         <div class="rmv">
-          <button class="red" type="button" (click)="destroy()">
+          <button class="red" type="button" (click)="remove()">
             Delete
           </button>
         </div>
       </div>
       <div class="dis_inp">
-        <input #disc name="discount" type="number" [(ngModel)]="discount" (keyup)="discountCheck()" ngModel > <span>%</span>
+        <input #disc="ngModel" name="discount" type="number" [(ngModel)]="discount" (keyup)="discountCheck()"> <span>%</span>
       </div>
-
     </div>
 
 </form>
