--- a/src/app/sales/sales.component.html
+++ b/src/app/sales/sales.component.html
@@ -11,7 +11,7 @@
     <div class="card-container item">
       <div class="_jd">
         <h2>
-          Client Cart ({{numbers}})
+          Client Cart ({{this.cart.length}})
         </h2>
 
         <div class="j_e">
@@ -26,7 +26,7 @@
 
     </div>
 
-    <app-sale *ngFor="let item of cart; index as i"></app-sale>
+    <app-sale *ngFor="let item of cart; index as i" [index]="i" [Products]="products"></app-sale>
 
     <div class="add">
       <button (click)="addSale()">
@@ -37,34 +37,28 @@
   </div>
 
   <div class="side">
-    <div class="side-total">
+    <div class="side-total" #sidetotal [ngClass]="{'fixed': sticky}">
       <div class="card-container">
         <div  class="_sid">
           <h2> Sale Summary</h2>
         </div>
         <div class="_sdeta">
-          <div class="_dk">
+          <!-- <div class="_dk">
             <div class="pro_d">
               Derika Rice 500kg
             </div>
             <div class="_pro_pr">
               $5500
             </div>
-          </div>
-          <div class="_dk">
-            <div class="pro_d">
-              Derika Rice 500kg
-            </div>
-            <div class="_pro_pr">
-              $55029
-            </div>
-          </div>
-          <div class="_dk">
-            <div class="pro_d">
-              Derika Rice 500kg
-            </div>
-            <div class="_pro_pr">
-              $55
+          </div> -->
+          <div *ngFor="let item of sales" >
+            <div class="_dk" *ngIf="item.productSet">
+              <div class="pro_d">
+                {{item.product.name}} ({{item.quantity}})
+              </div>
+              <div class="_pro_pr" >
+                ${{item.total}}
+              </div>
             </div>
           </div>
         </div>
@@ -76,13 +70,13 @@
                 Total
               </div>
               <div class="fke">
-                $25000033
+                ${{grandTotal}}
               </div>
             </div>
           </div>
           <div class="_pa">
-            <button class="red">
-              Make Sale ({{numbers}})
+            <button [disabled]="!cartDetails.length? true : false" (click)="sell()" class="red">
+              Make Sale ({{!cartDetails.length? 0 : cartDetails.length }})
             </button>
           </div>
         </div>
