--- a/src/app/sales/sales.component.scss
+++ b/src/app/sales/sales.component.scss
@@ -52,6 +52,8 @@
 }
 
 .side-total {
+  transition: all 1s ease-in-out;
+
   .card-container {
     // padding-top: 10px;
   }
@@ -121,7 +123,8 @@
 }
 
 .fixed {
-  position: fixed !important;
   top: 16px;
-  z-index: 1;
+  z-index: 4;
+  position: fixed !important;
+  width: 320px;
 }
