--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,8 +35,7 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button{
   -webkit-appearance: none;
 }
-
-input, .form-control {
+input, .form-control, textarea {
   display: block;
   width: 100%;
   padding: .5rem 1rem;
@@ -60,6 +59,10 @@ input, .form-control {
     outline: none;
     border-color: #3D4D6A;
   }
+}
+
+textarea{
+  height: 5rem;
 }
 
 button{
@@ -225,7 +228,7 @@ button[disabled]{
   margin-bottom: 1rem;
 }
 
-input.ng-invalid.ng-touched, select.ng-invalid.ng-touched{
+input.ng-invalid.ng-touched, select.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched{
   border-color: #ff5151;
 }
 
@@ -378,5 +381,36 @@ input.ng-invalid.ng-touched, select.ng-invalid.ng-touched{
   }
 }
 
+.select {
+  display: block;
+  width: 100%;
+  padding: .5rem 1rem;
+  font-size: 16px;
+  color: #3D4D6A;
+  background-color: #fff;
+  background-clip: padding-box;
+  transition: border-color .3s ease-in-out;
+  font-weight: 600;
+  border: solid 1.7px #DCDEE3;
+  border-radius: 4px;
+  height: 2.8rem;
+  cursor: pointer;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+}
+.select::-ms-expand {
+  display: none;
+}
+.select:hover {
+  border-color: #888;
+}
+.select:focus {
+  outline: none;
+  border-color: #3D4D6A;
+}
 
-
+.select option {
+  font-weight:normal;
+  font-size: 1rem;
+}
