--- a/src/app/SalesModule/sale/sale.component.scss
+++ b/src/app/SalesModule/sale/sale.component.scss
@@ -293,3 +293,11 @@
 .red-text{
   color: #ff5a5a;
 }
+
+
+.card-container.collapse{
+  position: relative;
+  height: 50px;
+  overflow: hidden;
+  padding: 30px;
+}
