--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -48,7 +48,7 @@ $color1: #FFE379;
     }
   }
 
-  .navlinks{
+  ul.navlinks{
     list-style-type: none;
     font-weight: bold;
     width: 100%;
@@ -56,9 +56,8 @@ $color1: #FFE379;
     padding-right: 40px;
 
     li{
-      height: 60px;
+      // height: 60px;
       position: relative;
-      // border: solid red 1px;
 
       a{
         font-size: 1.15rem;
@@ -67,7 +66,7 @@ $color1: #FFE379;
         --widthC: calc(var(--widthB) - 40px);
         padding-left: var(--widthC);
         width: 100%;
-        height: 100%;
+        height: 60px;
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
