--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,21 +18,25 @@
     <li  [ngClass]="{'open': productShow}">
       <a class="nav _jf" data-target="product" role="button" (click)="toggleProduct($event)">
         Product
-        <svg width="10" height="20" viewBox="0 0 64 99" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <line y1="-4.5" x2="75.4155" y2="-4.5" transform="matrix(-0.755812 0.654789 -0.755812 -0.654789 57 43.6187)" stroke="white" stroke-width="15"/>
-          <line y1="-4.5" x2="75.4155" y2="-4.5" transform="matrix(0.755812 0.654789 -0.755812 0.654789 0 6)" stroke="white" stroke-width="15"/>
+        <svg width="32" height="20" viewBox="0 0 32 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M24 12.5L16 7.5L8 12.5" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </a>
       <div id="product" class="collapse" [ngClass]="{'show': productShow}">
         <ul class="collapse-list">
           <li>
-            <a [routerLink]="['/product']" routerLinkActive="nav-active" class="nav" id="product">
+            <a [routerLink]="['/product/add']" routerLinkActive="nav-active" [routerLinkActiveOptions]="{exact: true}" class="nav" id="product">
               Add Product
             </a>
           </li>
           <li>
-            <a [routerLink]="['/addproduct']" routerLinkActive="nav-active" class="nav">
+            <a [routerLink]="['/product/view']" routerLinkActive="nav-active" [routerLinkActiveOptions]="{exact: true}" class="nav">
               View Product
+            </a>
+          </li>
+          <li>
+            <a [routerLink]="['/product/stocks']" routerLinkActive="nav-active" [routerLinkActiveOptions]="{exact: true}" class="nav">
+              Product Stock
             </a>
           </li>
         </ul>
@@ -41,25 +45,29 @@
     <li  [ngClass]="{'open': salesShow}">
       <a class="nav _jf" data-target="sale" role="button" (click)="toggleSale($event)">
         Sale
-        <svg width="10" height="20" viewBox="0 0 64 99" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <line y1="-4.5" x2="75.4155" y2="-4.5" transform="matrix(-0.755812 0.654789 -0.755812 -0.654789 57 43.6187)" stroke="white" stroke-width="15"/>
-          <line y1="-4.5" x2="75.4155" y2="-4.5" transform="matrix(0.755812 0.654789 -0.755812 0.654789 0 6)" stroke="white" stroke-width="15"/>
+        <svg width="32" height="20" viewBox="0 0 32 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M24 12.5L16 7.5L8 12.5" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </a>
       <div id="sale" class="collapse" [ngClass]="{'show': salesShow}">
         <ul class="collapse-list">
           <li>
-            <a [routerLink]="['/sales']" routerLinkActive="nav-active" class="nav" id="product">
+            <a [routerLink]="['/sales']" routerLinkActive="nav-active" [routerLinkActiveOptions]="{exact: true}" class="nav" id="product">
               Make Sales
             </a>
           </li>
           <li>
-            <a [routerLink]="['/addproduct']" routerLinkActive="nav-active" class="nav">
+            <a [routerLink]="['/sales/view']" routerLinkActive="nav-active" [routerLinkActiveOptions]="{exact: true}" class="nav">
               View Sales
             </a>
           </li>
         </ul>
       </div>
+    </li>
+    <li>
+      <a [routerLink]="['/']"  class="nav">
+        Adjustment Jornal
+      </a>
     </li>
   </ul>
 </nav>
