--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -4,6 +4,7 @@
   </div>
   <a href="">
     <i data-feather="grid" color="" ></i>
+    <!-- <img src="assets/images/grid.png" width="24" height="auto" alt=""> -->
   </a>
   <a >
     <i data-feather="bell" color="" ></i>
