--- a/src/app/SalesModule/sale/sale.component.html
+++ b/src/app/SalesModule/sale/sale.component.html
@@ -1,100 +1,147 @@
-<div class="card-container item collaps">
+  <div class="card-container item collaps">
 
-  <form #form="ngForm">
+    <form #form="ngForm">
 
-    <div class="prod">
-      <div class="checkbox">
-        <input name="checkbox" type="checkbox">
+      <div class="prod">
+        <div class="checkbox">
+          <input name="checkbox" type="checkbox">
+        </div>
+        <div>
+          <select class="select" [disabled]="!Products.length" name="name" [ngModel]="product.id" #name="ngModel"
+            required>
+            <option disabled [ngValue]="null">Select Product</option>
+            <option *ngFor="let item of Products" [value]="item.id">{{item.name}}</option>
+          </select>
+          <!-- Select Product -->
+        </div>
+        <div class="total">
+          <span>
+            ${{total}}
+          </span>
+        </div>
+
       </div>
-      <div>
-        <select class="select" [disabled]="!Products.length" name="name" [ngModel]="product.id"  #name="ngModel" required>
-          <option disabled [ngValue]="null">Select Product</option>
-          <option *ngFor="let item of Products" [value]="item.id">{{item.name}}</option>
-        </select>
-        <!-- Select Product -->
+
+      <div class="pro-body">
+        <div class="_det">
+          <div class="_pdetails" [ngClass]="{'red-text': !productSet}">
+            {{product.details}}
+          </div>
+          <div class="_pava">
+            <div class="_ic">
+              <svg width="20" height="22" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M4 1L1 5V19C1 19.5304 1.21071 20.0391 1.58579 20.4142C1.96086 20.7893 2.46957 21 3 21H17C17.5304 21 18.0391 20.7893 18.4142 20.4142C18.7893 20.0391 19 19.5304 19 19V5L16 1H4Z"
+                  stroke="black" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M1 5H19" stroke="black" stroke-linecap="round" stroke-linejoin="round" />
+                <path
+                  d="M14 9C14 10.0609 13.5786 11.0783 12.8284 11.8284C12.0783 12.5786 11.0609 13 10 13C8.93913 13 7.92172 12.5786 7.17157 11.8284C6.42143 11.0783 6 10.0609 6 9"
+                  stroke="black" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <div class="_qty"> {{product.quantity}} </div>
+            <div class="_uni"> {{product.unit}} </div>
+          </div>
+
+          <div class="_prc">
+            <span [ngClass]="{'dsc': discountSet}">
+              ${{product.price}}
+            </span>
+            <span *ngIf="discountSet">
+              ${{discountPrice}}
+            </span>
+            <span *ngIf="discountSet" [ngClass]="{'help': discountSet}">
+              Discounted Price
+            </span>
+          </div>
+
+        </div>
+        <div class="_sie">
+          <button (click)="reset()" class="reset" title="Reset">
+            <img src="assets/images/reset.png" alt="">
+          </button>
+          <div class="counter">
+            <button (click)="decrementCount()" [disabled]="quantity <= 1 ? true : false">
+              <svg width="16" height="2" viewBox="0 0 16 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H15" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </button>
+            <input type="number" autocomplete="off" name="quantity" (keyup)="qtyCheck()" (blur)="blurCheck()"
+              #qty="ngModel" [disabled]="product.quantity == 0 ? true : false" [(ngModel)]="quantity">
+            <button (click)="incrementCount()" [disabled]="quantity < product.quantity ? false : true">
+              <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.24927 1.1629V15.1629" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round"
+                  stroke-linejoin="round" />
+                <path d="M1.24927 8.1629H15.2493" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </button>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="pro-footer" [ngClass]="{'show': toggle}">
+        <div class="_pfor">
+          <div class="dis" (click)="toggle = !toggle">
+            <span>
+              Discount
+            </span>
+            <span>
+              <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1L7 7L13 1" stroke="#3D4D6A" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </span>
+          </div>
+          <div class="rmv">
+            <button class="red" type="button" (click)="remove()">
+              Delete
+            </button>
+          </div>
+        </div>
+        <div class="dis_inp">
+          <input #disc="ngModel" name="discount" type="number" [(ngModel)]="discount" (keyup)="discountCheck()">
+          <span>%</span>
+        </div>
+      </div>
+
+    </form>
+  </div>
+
+<!-- <ng-template [ngIf]="Products.length == 0">
+  <div class="card-container item collaps">
+    <div class="prod">
+      <div class="h-1-5 w-100 loading">
       </div>
       <div class="total">
-        <span>
-          ${{total}}
-        </span>
-      </div>
+        <div class="h-1-5 w-100 loading">
 
-    </div>
-
-    <div class="pro-body">
-      <div class="_det">
-        <div class="_pdetails" [ngClass]="{'red-text': !productSet}">
-          {{product.details}}
-        </div>
-        <div class="_pava">
-          <div class="_ic">
-            <svg width="20" height="22" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M4 1L1 5V19C1 19.5304 1.21071 20.0391 1.58579 20.4142C1.96086 20.7893 2.46957 21 3 21H17C17.5304 21 18.0391 20.7893 18.4142 20.4142C18.7893 20.0391 19 19.5304 19 19V5L16 1H4Z" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M1 5H19" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M14 9C14 10.0609 13.5786 11.0783 12.8284 11.8284C12.0783 12.5786 11.0609 13 10 13C8.93913 13 7.92172 12.5786 7.17157 11.8284C6.42143 11.0783 6 10.0609 6 9" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </div>
-          <div class="_qty"> {{product.quantity}} </div>
-          <div class="_uni"> {{product.unit}} </div>
-        </div>
-
-        <div class="_prc">
-          <span [ngClass]="{'dsc': discountSet}">
-            ${{product.price}}
-          </span>
-          <span *ngIf="discountSet">
-            ${{discountPrice}}
-          </span>
-          <span *ngIf="discountSet" [ngClass]="{'help': discountSet}">
-            Discounted Price
-          </span>
-        </div>
-
-      </div>
-      <div class="_sie">
-        <button (click)="reset()" class="reset" title="Reset">
-          <img src="assets/images/reset.png" alt="">
-        </button>
-        <div class="counter">
-          <button (click)="decrementCount()" [disabled]="quantity <= 1 ? true : false">
-            <svg width="16" height="2" viewBox="0 0 16 2" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1 1H15" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </button>
-          <input type="number" autocomplete="off" name="quantity" (keyup)="qtyCheck()" (blur)="blurCheck()" #qty="ngModel" [disabled]="product.quantity == 0 ? true : false" [(ngModel)]="quantity">
-          <button (click)="incrementCount()" [disabled]="quantity < product.quantity ? false : true">
-            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M8.24927 1.1629V15.1629" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M1.24927 8.1629H15.2493" stroke="#3D4D6A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </button>
         </div>
       </div>
 
     </div>
 
-    <div class="pro-footer" [ngClass]="{'show': toggle}">
-      <div class="_pfor">
-        <div class="dis" (click)="toggle = !toggle">
-          <span>
-            Discount
-          </span>
-          <span>
-            <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1 1L7 7L13 1" stroke="#3D4D6A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </span>
-        </div>
-        <div class="rmv">
-          <button class="red" type="button" (click)="remove()">
-            Delete
-          </button>
-        </div>
+    <div class="pro-bod">
+      <div class="h-1-5 w-100 loading">
+
       </div>
-      <div class="dis_inp">
-        <input #disc="ngModel" name="discount" type="number" [(ngModel)]="discount" (keyup)="discountCheck()"> <span>%</span>
+
+      <div class="h-1-5 w-70 loading">
+
+      </div>
+
+      <div class="h-1-5 w-50 loading">
+
+      </div>
+      <div class="h-1-5 w-50 loading">
+
       </div>
     </div>
 
-</form>
-</div>
+    <div class="pro-footer" >
+      <div class="h-1-5 w-100 loading">
+      </div>
+    </div>
+  </div>
+</ng-template> -->
