--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,29 @@ html, body {
   font-weight: 400;
 }
 
+/* Turn on a 13x13 scrollbar */
+::-webkit-scrollbar {
+  width: 7px;
+  border-radius: 5px;
+}
+
+/* Track below and above */
+::-webkit-scrollbar-track {
+  background-color: rgba(223, 227, 235, 0.67);
+  border-radius: 10px;
+}
+
+/* The thumb itself */
+::-webkit-scrollbar-thumb {
+  background: rgb(160, 160, 160);
+  border-radius: 10px;
+  // box-shadow: inset 0 0 0 10px;
+
+  &:hover{
+    background: rgb(94, 94, 94);
+  }
+}
+
 *, ::after, ::before {
   outline: none !important;
   box-sizing: border-box;
@@ -163,12 +186,11 @@ button, input, optgroup, select, textarea {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1.5rem;
-
+}
   .title{
     font-size: 1.5rem;
     font-weight: bold;
   }
-}
 
 .card-container {
   padding: 20px 30px;
@@ -381,6 +403,10 @@ input.ng-invalid.ng-touched, select.ng-invalid.ng-touched, textarea.ng-invalid.n
   }
 }
 
+.checkbox{
+  display: inline-block;
+}
+
 .select {
   display: block;
   width: 100%;
@@ -420,3 +446,236 @@ select[disabled]{
   background-color: rgb(241, 241, 241);
   opacity: .7;
 }
+
+.table-header{
+  background-color: #fff;
+  box-shadow: 0px 0px 3px 0px #e7eaeefa;
+  padding: 20px 20px;
+  margin-bottom: 5px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.table-container{
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0px 0px 3px 0px #e7eaeefa;
+}
+
+table{
+  width: 100%;
+  border-spacing: 0;
+  padding: 0;
+  border-collapse: collapse;
+}
+
+tr{
+  padding-bottom: 10px;
+  padding-top: 10px;
+  -webkit-box-shadow: inset 0 -1px 0 0 rgba(100,121,143,0.122);
+  box-shadow: inset 0 -1px 0 0 rgba(100,121,143,0.122);
+  position: relative;
+}
+
+tr:hover td {
+  z-index: 1;
+  background-color: rgb(255, 240, 188);
+}
+
+
+th{
+  outline: none;
+  padding: 10px;
+  vertical-align: middle;
+  white-space: nowrap;
+  border-bottom: 2px rgba(100,121,143,0.122) solid;
+  box-shadow: inset 0 -1px 0 0 rgba(100,121,143,0.122);
+  font-size: 1.1rem;
+  box-sizing: border-box;
+}
+
+.xY {
+  border-bottom: 2px rgba(100,121,143,0.122) solid;
+  empty-cells: show;
+  height: 20px;
+  outline: none;
+  padding: 10px;
+  vertical-align: middle;
+  white-space: nowrap;
+  transition: all 0.2s ease;
+}
+
+td.det_{
+  max-width: 40%;
+}
+
+.det{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.table-row{
+  cursor: pointer;
+}
+
+.al-r{
+  text-align: right;
+}
+
+.back{
+width: 40px;
+height: 40px;
+border-radius: 50%;
+display: inline-flex;
+align-items: center;
+background-color: #fff;
+justify-content: center;
+box-shadow:0px 2px 4px #e7eaeefa;
+
+&:hover{
+  svg{
+    path{
+      stroke: #FFE379
+    }
+  }
+}
+
+}
+
+// Loading PlaceHolder
+
+.loading {
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 10px;
+  background: #eaeaea;
+  border-radius: 5px;
+
+  &::after {
+    content: "";
+    display: block;
+    background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+    background-size: 800px 104px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateX(0) rotate(30deg);
+    animation: 2s loading-placeholder linear infinite;
+  }
+}
+
+@keyframes loading-placeholder {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.loads {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-name: placeload;
+  animation-name: placeload;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  background: #f6f7f8;
+  background: #eeeeee;
+  background: -webkit-gradient(linear, left top, right top, color-stop(8%, #eeeeee), color-stop(18%, #dddddd), color-stop(33%, #eeeeee));
+  background: -webkit-linear-gradient(left, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+  background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+  -webkit-background-size: 800px 104px;
+  background-size: 1200px 104px;
+  position: relative;
+}
+
+@-webkit-keyframes placeload {
+  0% {
+    background-position: -468px 0;
+  }
+  100% {
+    background-position: 468px 0;
+  }
+}
+@keyframes placeload {
+  0% {
+    background-position: -468px 0;
+  }
+  100% {
+    background-position: 468px 0;
+  }
+}
+
+.w-10{
+  width: 10%;
+}
+
+.w-20{
+  width: 20%;
+}
+
+.w-30{
+  width: 30%;
+}
+
+.w-40{
+  width: 40%;
+}
+
+.w-50{
+  width: 50%;
+}
+
+.w60{
+  width:60%;
+}
+
+.w-70{
+  width: 70%;
+}
+
+.w-80{
+  width: 80%;
+}
+
+.w-90{
+  width: 90%;
+}
+
+.w-100{
+  width: 100%;
+}
+
+.h-1{
+  height: 1rem;
+}
+
+.h-1-5{
+  height: 1.5rem;
+}
+
+.h-2{
+  height: 2rem;
+}
+
+.h-2-5{
+  height: 2.5rem;
+}
+
+.h-3{
+  height: 3rem;
+}
+
+.h-4{
+  height: 4rem;
+}
+
+
